# simstack

./: .cruft.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AbstractSettings.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GridBean.py  LICENSE  README.md  README.rst  SimpleTests.py  TestMain.py  TestWaNo.py  WFELicense.py  WFEditor.py  WFEditorPanel.py  WaNo.py  WaNoEditor.py  WaNoGitRevision.py  WaNoMain.py  WaNoWidgets.py  fabi.py  gbe1.py  gbe2.py  git-subtree-update.sh  meson.build  old-parser-stuff.py  pyproject.toml  setup.py  simstack  simstack_env.yml  test3.py  test4.py  test_yaml_timo.py  yaml_in1.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  conda_build.yml
SimStack/: SSHConnector.py  SimStackEntryPoint.py  WFEditorApplication.py  WaNoSettingsProvider.py
SimStack/lib/: DynamicTimer.py  QtClusterSettingsProvider.py
SimStack/view/: AbstractWaNoView.py  PropertyListView.py  ResourcesView.py  WFEditorPanel.py  WFEditorWidgets.py  WFViewManager.py  WaNoRegistrySelection.py  WaNoSettings.py  WaNoViews.py
WaNo/: AbstractSettings.py  Constants.py  EditorState.py  SSHConnector.py  SimStackEntryPoint.py  SimStackPaths.py  TestMain.py  UnicoreConnector.py  UnicoreHelpers.py  UnicoreState.py  WFEditor.py  WFEditorApplication.py  WFEditorPanel.py  WaNo.py  WaNoController.py  WaNoEditor.py  WaNoFactory.py  WaNoRepository.py  WaNoSettings.py  WaNoSettingsProvider.py  WaNoWidgets.py  __init__.py  meson.build  test1.py
WaNo/WaNoRepository/: MDSimulator.yml  Script.xml  test1.yml
WaNo/lib/: AbstractSettings.py  CallableQThread.py  DynamicTimer.py  FileSystemTree.py  MultiselectDropDownList.py  QtClusterSettingsProvider.py  TPCThread.py  meson.build
WaNo/lib/pyura/: .gitignore
WaNo/lib/pyura/docs/: 2015-03-31_flo_test.csr  2015-03-31_flo_test.key  2015-03-31_flo_test.pem  Classdiagram.dia  docu_todo  object_dumps
WaNo/lib/pyura/docs/pyura_documentation/source/: api.rst  conf.py
WaNo/lib/pyura/proof_of_concepts/: simpletest.py
WaNo/lib/pyura/pyura/: Application.py  AuthProvider.py  ClusterResource.py  Connection.py  ConnectionManager.py  Constants.py  Exceptions.py  HTTPBasicAuthProvider.py  Job.py  JobManager.py  Manager.py  PKIAuthProvider.py  Registry.py  ServerPrimitive.py  Site.py  Storage.py  StorageManager.py  UnicoreAPI.py  User.py  Workflow.py  WorkflowManager.py  __init__.py  bak_pyura.py
WaNo/lib/pyura/tests/: FakeRequestResponses.py  JobManagerTestSuite.py  UnittestBundledTests.py  test_pyura.py
WaNo/lib/pyura/tests/lib/funcsigs/: __init__.py
WaNo/lib/pyura/tests/lib/mock/: .__init__.py.swo  __init__.py
WaNo/lib/pyura/tests/lib/pbr/: builddoc.py  core.py  util.py  version.py
WaNo/lib/pyura/tests/lib/pbr/hooks/: backwards.py
WaNo/lib/pyura/tests/lib/pbr/tests/: test_core.py  test_packaging.py  test_setup.py  test_version.py  test_wsgi.py
WaNo/lib/pyura/tests/lib/pbr/tests/testpackage/pbr_testpackage/: __init__.py
WaNo/model/: AbstractWaNoModel.py  TestWaNo.py  WaNoModels.py  WaNoTreeWalker.py
WaNo/view/: AbstractWaNoView.py  DownloadProgressMenuButton.py  DownloadProgressWidget.py  DropDownWidgetButton.py  MessageDialog.py  MultiselectDropDownList.py  PropertyListView.py  QHVLine.py  RemoteImporterDialog.py  ResourcesView.py  ViewTimer.py  WFEditor.py  WFEditorLogTab.py  WFEditorMainWindow.py  WFEditorPanel.py  WFEditorTreeModels.py  WFEditorWidgets.py  WFRemoteFileSystem.py  WFViewManager.py  WaNo.py  WaNoEditorWidget.py  WaNoRegistrySelection.py  WaNoSettings.py  WaNoViews.py  WaNoWidgets.py  __init__.py  meson.build
WaNoRepository/: DFTRelax.xml  Deposit.xml  Simona.xml  gromacs.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
docs/: 2015-03-31_flo_test.crt  2015-03-31_flo_test.jks  2015-03-31_flo_test.p12  Classdiagram.dia  object_dumps  python_dependencies
docs/pyura_documentation/: Makefile  make.bat
proof_of_concepts/: bugtest.py  pyura_test.py
pyura/: Connection.py  Constants.py  Job.py  Manager.py  Registry.py  SiteManager.py  Storage.py  StorageManager.py  UnicoreAPI.py  User.py  __init__.py  helpers.py  pyura.py
release_tools/: bundle_embedded_linux.sh  bundle_embedded_windows.sh  compiled_client.bat  compiled_client.sh  do_kit_linux_release.sh  do_kit_windows_release.bat  git_archive.sh  install-simstack.bat  maccompile.sh  release_tools_bundle_vlab.sh  run-simstack.bat  simstack_pyqt5.yml  simstack_pyside2.yml  switch_to_dev.sh
simstack/: Constants.py  EditorState.py  SSHConnector.py  SimStackEntryPoint.py  SimStackPaths.py  WFEditorApplication.py  WaNoSettingsProvider.py  __init__.py
simstack/lib/: AbstractSettings.py  BetterThreadPoolExecutor.py  CallableQThread.py  DynamicTimer.py  FileSystemTree.py  QtClusterSettingsProvider.py
simstack/view/: AbstractWaNoView.py  DownloadProgressMenuButton.py  DownloadProgressWidget.py  DropDownWidgetButton.py  HorizontalTextEditWithFileImport.py  MessageDialog.py  MultiselectDropDownList.py  PropertyListView.py  QHVLine.py  RemoteImporterDialog.py  ResourcesView.py  ViewTimer.py  WFEditor.py  WFEditorLogTab.py  WFEditorMainWindow.py  WFEditorPanel.py  WFEditorTreeModels.py  WFEditorWidgets.py  WFRemoteFileSystem.py  WFViewManager.py  WaNo.py  WaNoEditorWidget.py  WaNoRegistrySelection.py  WaNoSettings.py  WaNoViews.py  WaNoWidgets.py  wf_editor_base.py  wf_editor_factory.py  wf_editor_models.py  wf_editor_views.py  wf_editor_widgets.py
tests/: ConnectionTestSuite.py  check_hang.py  conftest.py  testWaNoModels.py  test_Constants.py  test_SSHConnector.py  test_SimStackEntryPoint.py  test_SimStackPaths.py  test_WFEditorApplication.py  test_WaNoSettingsProvider.py  test_pyura.py
tests/lib/: test_AbstractSettings.py  test_QtClusterSettingsProvider.py
tests/view/: test_AbstractWaNoView.py  test_DropDownWidgetButton.py  test_HorizontalTextEditWithFileImport.py  test_MessageDialog.py  test_MultiselectDropDownList.py  test_PropertyListView.py  test_QHVLine.py  test_RemoteImporterDialog.py  test_ResourcesView.py  test_ViewTimer.py  (+23 more)
(+18 files in other folders)
