[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simstack"
authors = [{name = "Timo Strunk", email = "timo.strunk@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: Other/Proprietary License"]
dynamic = ["version", "description"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.mesonpep517.metadata]
author="Timo Strunk"
author-email="timo.strunk@gmail.com"
summary="SimStack"
meson-python-option-name="python3"

[tool.mesonpep517.entry-points]
console_scripts = [
    'simstack = simstack.SimStackEntryPoint:main',
]
